--- a/src/components/likedMessages/LikedMessages.css
+++ b/src/components/likedMessages/LikedMessages.css
@@ -14,6 +14,9 @@
   padding: 5px 10px;
   margin: 5px 10px;
 }
-.pageWrap {
+.pageWraps {
   width: 59rem;
+  position: absolute;
+  left: 950px;
+  top: 525px;
 }
