--- a/src/components/deleteUser/DeleteUser.css
+++ b/src/components/deleteUser/DeleteUser.css
@@ -1,13 +1,12 @@
 * {
-    box-sizing: border-box;
-    font-family: sans-serif 
-
+  box-sizing: border-box;
+  font-family: sans-serif;
 }
 
 /* Set a style for all buttons */
 button {
-  background-color:yellow;
-  color:green;
+  background-color: yellow;
+  color: green;
   padding: 12px 21px;
   margin: 9px 0;
   border: none;
@@ -17,13 +16,14 @@ button {
 }
 
 button:hover {
-  opacity:1;
+  opacity: 1;
 }
 h2 {
-  color: purple
+  color: purple;
 }
 /* Float cancel and delete buttons and add an equal width */
-.cancelbtn, .deletebtn {
+.cancelbtn,
+.deletebtn {
   float: center;
   width: 25%;
 }
@@ -36,7 +36,8 @@ h2 {
 
 /* Add a color to the delete button */
 .deletebtn {
-  background-color: #f44336; color: black;
+  background-color: #f44336;
+  color: black;
 }
 
 /* Add padding and center-align text to the container */
@@ -55,7 +56,7 @@ h2 {
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-  background-color:steelblue;
+  background-color: steelblue;
   padding-top: 50px;
 }
 
@@ -98,7 +99,8 @@ hr {
 
 /* Change styles for cancel button and delete button on extra small screens */
 @media screen and (max-width: 300px) {
-  .cancelbtn, .deletebtn {
+  .cancelbtn,
+  .deletebtn {
     width: 100%;
   }
 }
