--- a/src/pages/Profile.css
+++ b/src/pages/Profile.css
@@ -1,16 +1,3 @@
-.Rudolph {
-  border-radius: 2rem;
-  margin: 10px;
-}
-.Red {
-  border-radius: 2rem;
-  margin: 10px;
-}
-.Prince {
-  border-radius: 2rem;
-  margin: 10px;
-}
-.Rain {
-  border-radius: 2rem;
-  margin: 10px;
+.Liked1 {
+  position: relative;
 }
